--- a/server/pom.xml
+++ b/server/pom.xml
@@ -6,12 +6,19 @@
 	<version>1.0.0-SNAPSHOT</version>
   </parent>
 
-  <modelVersion>4.0.0</modelVersion>
-  <artifactId>anoproxy-server</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
-  <name></name>
+  	<modelVersion>4.0.0</modelVersion>
+  	<artifactId>anoproxy-server</artifactId>
+  	<version>1.0.0-SNAPSHOT</version>
+  	<name>anoproxy-server</name>
+	<packaging>war</packaging>
+
 
   <dependencies>
+	  <dependency>
+		  <groupId>net.anotheria</groupId>
+		  <artifactId>anoproxy-shared</artifactId>
+		  <version>${project.version}</version>
+	  </dependency>
     <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-api</artifactId>
@@ -47,5 +54,102 @@
           <artifactId>hamcrest-all</artifactId>
           <scope>test</scope>
       </dependency>
+	  <dependency>
+		  <groupId>javax.servlet</groupId>
+		  <artifactId>javax.servlet-api</artifactId>
+		  <scope>provided</scope>
+	  </dependency>
+	  <!-- jersey -->
+	  <dependency>
+		  <groupId>com.sun.jersey</groupId>
+		  <artifactId>jersey-server</artifactId>
+		  <version>${jersey-version}</version>
+	  </dependency>
+	  <dependency>
+		  <groupId>com.sun.jersey</groupId>
+		  <artifactId>jersey-servlet</artifactId>
+		  <version>${jersey-version}</version>
+	  </dependency>
+	  <dependency>
+		  <groupId>com.sun.jersey</groupId>
+		  <artifactId>jersey-json</artifactId>
+		  <version>${jersey-version}</version>
+	  </dependency>
+	  <!-- jax-rs -->
+	  <dependency>
+		  <groupId>javax.ws.rs</groupId>
+		  <artifactId>jsr311-api</artifactId>
+		  <version>1.1.1</version>
+	  </dependency>
+
+	  <dependency>
+		  <groupId>net.anotheria</groupId>
+		  <artifactId>moskito-core</artifactId>
+		  <version>${moskito-version}</version>
+	  </dependency>
+	  <dependency>
+		  <groupId>net.anotheria</groupId>
+		  <artifactId>moskito-inspect-remote</artifactId>
+		  <version>${moskito-version}</version>
+	  </dependency>
+	  <dependency>
+		  <groupId>org.moskito</groupId>
+		  <artifactId>moskito-control-agent-http-endpoint</artifactId>
+		  <version>1.2.2</version>
+	  </dependency>
+	  <dependency>
+		  <groupId>org.apache.httpcomponents</groupId>
+		  <artifactId>httpclient</artifactId>
+		  <version>4.3.6</version>
+	  </dependency>
+
+
   </dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>build-helper-maven-plugin</artifactId>
+				<version>1.5</version>
+				<executions>
+					<execution>
+						<id>add-source</id>
+						<phase>generate-sources</phase>
+						<goals>
+							<goal>add-source</goal>
+						</goals>
+						<configuration>
+							<sources>
+								<source>src/main/java/</source>
+							</sources>
+						</configuration>
+					</execution>
+					<execution>
+						<id>add-resource</id>
+						<phase>generate-resources</phase>
+						<goals>
+							<goal>add-resource</goal>
+						</goals>
+						<configuration>
+							<resources>
+								<resource>
+									<directory>${basedir}/src/main/java</directory>
+									<excludes>
+										<exclude>*.java</exclude>
+									</excludes>
+								</resource>
+							</resources>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>2.1</version>
+				<configuration>
+					<warName>ROOT</warName>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
