--- a/client/pom.xml
+++ b/client/pom.xml
@@ -9,7 +9,7 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>anoproxy-client</artifactId>
   <version>1.0.0-SNAPSHOT</version>
-  <name></name>
+  <name>anoproxy-client</name>
 
   <dependencies>
     <dependency>
