--- a/shared/pom.xml
+++ b/shared/pom.xml
@@ -9,7 +9,7 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>anoproxy-shared</artifactId>
   <version>1.0.0-SNAPSHOT</version>
-  <name></name>
+  <name>shared libs</name>
 
   <dependencies>
   </dependencies>
