--- a/server/pom.xml
+++ b/server/pom.xml
@@ -89,6 +89,11 @@
 	  </dependency>
 	  <dependency>
 		  <groupId>net.anotheria</groupId>
+		  <artifactId>moskito-aop</artifactId>
+		  <version>${moskito-version}</version>
+	  </dependency>
+	  <dependency>
+		  <groupId>net.anotheria</groupId>
 		  <artifactId>moskito-inspect-remote</artifactId>
 		  <version>${moskito-version}</version>
 	  </dependency>
@@ -111,6 +116,46 @@
   </dependencies>
 	<build>
 		<plugins>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>aspectj-maven-plugin</artifactId>
+				<version>${aspectj-maven-plugin.version}</version>
+				<configuration>
+					<complianceLevel>${aspectj-maven-plugin.complianceLevel}</complianceLevel>
+					<source>${source-version}</source>
+					<target>${target-version}</target>
+					<aspectLibraries>
+						<aspectLibrary>
+							<groupId>net.anotheria</groupId>
+							<artifactId>moskito-aop</artifactId>
+						</aspectLibrary>
+					</aspectLibraries>
+				</configuration>
+				<dependencies>
+					<dependency>
+						<groupId>org.aspectj</groupId>
+						<artifactId>aspectjrt</artifactId>
+						<version>${aspectj.version}</version>
+					</dependency>
+					<dependency>
+						<groupId>org.aspectj</groupId>
+						<artifactId>aspectjtools</artifactId>
+						<version>${aspectj.version}</version>
+					</dependency>
+				</dependencies>
+				<executions>
+					<execution>
+						<goals>
+							<goal>compile</goal>
+							<goal>test-compile</goal>
+						</goals>
+						<configuration>
+							<source>${source-version}</source>
+							<target>${target-version}</target>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>build-helper-maven-plugin</artifactId>
